// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/CircularProgress Custom color 1`] = `
<CircularProgress
  colorIndicator="#4caf50"
  colorTrack="#c8e6c9"
  size="md"
>
  <WithStyles(CircularProgressComp)
    colorIndicator="#4caf50"
    colorTrack="#c8e6c9"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    size="md"
    theme={Object {}}
  >
    <CircularProgressComp
      classes={
        Object {
          "@keyframes spin": undefined,
          "md": "CircularProgressComp-md-0-3-101",
          "root": "CircularProgressComp-root-0-3-100",
          "sm": "CircularProgressComp-sm-0-3-102",
        }
      }
      colorIndicator="#4caf50"
      colorTrack="#c8e6c9"
      size="md"
    >
      <div
        className="CircularProgressComp-root-0-3-100 CircularProgressComp-md-0-3-101"
        style={
          Object {
            "borderColor": "#c8e6c9",
            "borderTopColor": "#4caf50",
          }
        }
      />
    </CircularProgressComp>
  </WithStyles(CircularProgressComp)>
</CircularProgress>
`;

exports[`Storyshots Components/CircularProgress Variant md 1`] = `
<CircularProgress
  size="md"
>
  <WithStyles(CircularProgressComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    size="md"
    theme={Object {}}
  >
    <CircularProgressComp
      classes={
        Object {
          "@keyframes spin": undefined,
          "md": "CircularProgressComp-md-0-3-101",
          "root": "CircularProgressComp-root-0-3-100",
          "sm": "CircularProgressComp-sm-0-3-102",
        }
      }
      size="md"
    >
      <div
        className="CircularProgressComp-root-0-3-100 CircularProgressComp-md-0-3-101"
        style={
          Object {
            "borderColor": undefined,
            "borderTopColor": undefined,
          }
        }
      />
    </CircularProgressComp>
  </WithStyles(CircularProgressComp)>
</CircularProgress>
`;

exports[`Storyshots Components/CircularProgress Variant sm 1`] = `
<CircularProgress
  size="sm"
>
  <WithStyles(CircularProgressComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    size="sm"
    theme={Object {}}
  >
    <CircularProgressComp
      classes={
        Object {
          "@keyframes spin": undefined,
          "md": "CircularProgressComp-md-0-3-101",
          "root": "CircularProgressComp-root-0-3-100",
          "sm": "CircularProgressComp-sm-0-3-102",
        }
      }
      size="sm"
    >
      <div
        className="CircularProgressComp-root-0-3-100 CircularProgressComp-sm-0-3-102"
        style={
          Object {
            "borderColor": undefined,
            "borderTopColor": undefined,
          }
        }
      />
    </CircularProgressComp>
  </WithStyles(CircularProgressComp)>
</CircularProgress>
`;
